--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -4,44 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MAGNA - Ofertas</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <style>
+    .producto-card {
+      transition: transform 0.3s ease;
+    }
+
+    .producto-card:hover {
+      transform: scale(1.05);
+    }
+
+    .producto-card img {
+      max-height: 250px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>MAGNA</h1>
+  <header class="bg-dark text-white text-center py-3">
+    <h1 class="mb-0">MAGNA</h1>
   </header>
-  
-  <nav>
-    <a href="../index.html">Inicio</a>
-    <a href="ofertas.html">Ofertas</a>
-    <a href="nosotros.html">Nosotros</a>
-    <a href="productos.html">Productos</a>
-    <a href="contacto.html">Contacto</a>
-  </nav>
 
-  <section class="container text-center">
-    <h2>Ofertas de la Semana</h2>
-    <div class="productos">
-      <div class="producto">
-        <img src="../assets/imagenes/jeansunisex.jpg" alt="Jeans">
-        <h3>Jeans Unisex - 50% OFF</h3>
-        <p class="precio"><del>$60.00</del> $30.00</p>
-      </div>
-      <div class="producto">
-        <img src="../assets/imagenes/jeansmujer.jpg" alt="Jeans Mujer">
-        <h3>Jeans Mujer - 50% OFF</h3>
-        <p class="precio"><del>$40.00</del> $20.00</p>
-      </div>
-      <div class="producto">
-        <img src="../assets/imagenes/jeans.jpg" alt="Jeans Clásicos">
-        <h3>Jeans Clásicos - 50% OFF</h3>
-        <p class="precio"><del>$70.00</del> $35.00</p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="ofertas.html">Ofertas</a></li>
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+        </ul>
       </div>
     </div>
-  </section>
+  </nav>
 
-  <footer>
-    <p>&copy; 2025 MAGNA</p>
+  <main class="container my-5">
+    <h2 class="text-center mb-4">Ofertas de la Semana</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card producto-card h-100 shadow">
+          <img src="../assets/imagenes/jeansunisex.jpg" class="card-img-top" alt="Jeans Unisex">
+          <div class="card-body text-center">
+            <h5 class="card-title">Jeans Unisex - 50% OFF</h5>
+            <p class="card-text"><del>$60.00</del> $30.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card producto-card h-100 shadow">
+          <img src="../assets/imagenes/jeansmujer.jpg" class="card-img-top" alt="Jeans Mujer">
+          <div class="card-body text-center">
+            <h5 class="card-title">Jeans Mujer - 50% OFF</h5>
+            <p class="card-text"><del>$40.00</del> $20.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card producto-card h-100 shadow">
+          <img src="../assets/imagenes/jeans.jpg" class="card-img-top" alt="Jeans Clásicos">
+          <div class="card-body text-center">
+            <h5 class="card-title">Jeans Clásicos - 50% OFF</h5>
+            <p class="card-text"><del>$70.00</del> $35.00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 MAGNA</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
